--- a/.htaccess
+++ b/.htaccess
@@ -137,6 +137,7 @@ Options +FollowSymLinks
 RewriteRule ^css/(.*)$ public/css/$1 [L]
 RewriteRule ^img/(.*)$ public/img/$1 [L]
 RewriteRule ^js/(.*)$ public/js/$1 [L]
+RewriteRule ^video/(.*)$ public/video/$1 [L]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
